clusters/mgmt/apps/chihiro/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chihiro-service
  labels:
    app.kubernetes.io/name: chihiro-service
  annotations:
    loadbalancer.openstack.org/load-balancer-address: "172.16.255.11"
spec:
  type: LoadBalancer
  loadBalancerIP: 172.16.255.11
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: chihiro
