clusters/mgmt/apps/chihiro/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chihiro
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "chihiro.mgmt.rpcu.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - name: chihiro-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: chihiro-service
          port: 8080
